Fixato icone e gap tra le immagini del footer

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -62,6 +62,11 @@ p {
   cursor: pointer;
 }
 
+.social-footer {
+  font-size: 200%;
+  cursor: pointer;
+}
+
 .formContainer {
   position: absolute;
   background-color: whitesmoke;
