--- a/css/navbar.css
+++ b/css/navbar.css
@@ -165,6 +165,14 @@ nav .logo {
   margin-top: 50px;
 }
 
+.footer .container .footer-section .content .text {
+  font-size: 1rem;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 0.8em;
+}
+
 .footer .container .footer-section img {
   width: 30px;
   margin-top: 10px;
@@ -173,11 +181,6 @@ nav .logo {
 .footer .container .footer-section .title {
   font-size: 1.8rem;
   width: 100%;
-}
-
-.footer .container .footer-section .content .text {
-  font-size: 1rem;
-  margin: 10px;
 }
 
 .copyright {
@@ -268,7 +271,7 @@ svg {
   right: 20px;
   z-index: 999;
   position: fixed;
-  opacity: .5;
+  opacity: 0.5;
   cursor: pointer;
 }
 
